@@ -1,3 +1,8 @@
+2005-02-19	Benedikt Meurer <benny@xfce.org>
+
+	* acinclude.m4, configure.ac: Remove custom Python headers check
+	  and use the new check from xfce4-dev-tools instead.
+
 2005-02-18	Benedikt Meurer <benny@xfce.org>
 
 	* po/libexo-0.3.pot, po/de.po, po/en_GB.po: Update the translation
